# codex-python

./: README.md  UPSTREAM.md  pyproject.toml
codex/: __init__.py  auth.py  cli.py  core.py  goal.py  memory.py  model.py  parity.py  parity_manifest.json  prompts.py  remote_control.py  state.py  tools.py  types.py
codex/assets/: models.json
codex/remote_control/: README.md  __init__.py  app_helpers.py  app_server.py  constants.py  daemon.py  display.py  local.py  pid.py  protocol.py  service.py  trace.py  transport.py  types.py  utils.py
docs/: README.md
examples/: run_core.py
tests/: test_core.py  test_remote_control.py
tests/fixtures/: remote_control_success_trace.jsonl
