[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-python"
version = "0.1.0"
description = "Pure-Python port of the openai/codex agent (codex exec core path)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Weiwei Sun" }]
keywords = ["codex", "openai", "agent", "cli", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
images = ["Pillow>=10"]

[project.urls]
Homepage = "https://github.com/sunnweiwei/codex-python"
Upstream = "https://github.com/openai/codex"

[project.scripts]
codex-python = "codex.cli:main"

[tool.setuptools.packages.find]
include = ["codex*"]

[tool.setuptools.package-data]
codex = [
    "assets/**/*",
    "parity_manifest.json",
]